--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title> 정승원 - 한화케미칼</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/font-awesome.min.css">
+    <script src="./js/jquery-1.12.3.js"></script>
+    <script src="./js/script.js"></script>
 </head>
 
 <body>
@@ -225,6 +227,25 @@
                 </div>
             </div>
         </footer>
+        <div id="popup">
+            <div class="close">―</div>
+            <div class="text">
+                <p>
+                    Hanwha Energy <br />
+                    Innovation 전시관 <br />
+                    <br />
+                    한화가 준비하는 그린 수소 시티 <br />
+                    Hanwha Energy Innovation 전시관에 초대합니다. <br />
+                    <br />
+                    한화는, 친환경 에너지 분야의 사업 경쟁력을 강화하여 <br />
+                    그린소스 생태계 시장 진출을 적극적으로 추진하고 있습니다. <br />
+                    <br />
+                    Hanwha Energy Innovation 전시관에서 <br />
+                    한 걸음 가까워진 그린소스의 미래를 만나보세요.
+                </p>
+                <a href="#">사이트 바로가기</a>
+            </div>
+        </div>
     </div>
 </body>
 
